--- a/css/carFinder.css
+++ b/css/carFinder.css
@@ -98,4 +98,23 @@ a {
         text-decoration: underline;
     }
     
- 
+.spinner {
+  position: relative;
+  width: 50px;
+  height: 50px;
+  margin: 0 auto;
+  padding: 40px 0;
+  p {
+    margin-top: 20px;
+  }
+} 
+
+#loading {
+ position: absolute;
+ left:50%;
+ top:50%;
+ width: 100px;
+ height: 100px;
+ display: none;
+ background-image: url('/img/ajax-loader.gif');
+}
