Revised for new version (2) of Bing Search API

--- a/Areas/HelpPage/Views/Help/Index.cshtml
+++ b/Areas/HelpPage/Views/Help/Index.cshtml
@@ -25,7 +25,9 @@
         <div class="content-wrapper">
             <h2>Introduction</h2>
             <p>
-                Provide a general description of your APIs here.
+                This API is used for retrieving information on from the Car Finder database.
+                It will also retrieve images of a selected car from a Bing search and recall data, if any,
+                from the National Highway Transportation Safety Agency (NHTSA).
             </p>
         </div>
     </section>
