--- a/Views/Shared/_Layout.cshtml
+++ b/Views/Shared/_Layout.cshtml
@@ -1,25 +1,152 @@
 ﻿<!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width" />
-    @*<title>@ViewBag.Title</title>*@
-    @Styles.Render("~/Content/css")
-    @Scripts.Render("~/bundles/modernizr")
+
+    <!-- Meta-Information -->
+    <title>Car Finder</title>
+
+    <link href="~/Content/bootstrap.css" rel="stylesheet" />
+    
+    <link rel="stylesheet" href="~/css/bootstrap/bootstrap-theme.min.css" />
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet" />
+
+    <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,400,700,600,300' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Raleway:400,100,200,300,500,600,800,700,900' rel='stylesheet' type='text/css'>
+
+    <!-- Our Website CSS Styles -->
+    <link href="~/css/animate.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/slide/component.css" rel="stylesheet" type="text/css" />
+
+    <link href="~/css/minislide/flexslider.css" rel="stylesheet" type="text/css" />
+
+    <!-- End Mini Slider -->
+
+    <link href="~/css/fancybox/jquery.fancybox.css" rel="stylesheet" type="text/css" />
+
+    <link rel="stylesheet" href="~/css/main.css" />
+    <link href="~/css/responsive.css" rel="stylesheet" type="text/css" />
+
+    <link href="~/trNgGrid-master/trNgGrid.css" rel="stylesheet" />
+    <link href="~/Content/themes/base/spinner.css" rel="stylesheet" />
+    <link href="~/css/carFinder.css" rel="stylesheet" />
+    <!-- Carouse Testimonial-->
+    <link href="~/css/owl_carousel/owl.carousel.css" rel="stylesheet" type="text/css" />
+    <link href="~/css/owl_carousel/owl.theme.css" rel="stylesheet" type="text/css" />
+    <!-- End Carouse Testimonial-->
+
+    <style>
+        #tgpLogo {
+            color: #333;
+            visibility: visible;
+        }
+
+        .navbar-default .navbar-brand:hover,
+        .navbar-default .navbar-brand:focus {
+            color: #ADCAAD !important;
+        }
+
+        .navbar-default .navbar-nav > li > a:hover,
+        .navbar-default .navbar-nav > li > a:focus,
+        #tgpLogo:hover, #tgpLogo:focus {
+            color: #ADCAAD !important;
+            text-decoration: none;
+        }
+    </style>
+
+    <!--[if lt IE 7]>
+    <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+    <!--[if IE 7]>
+    <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+    <!--[if IE 8]>
+    <html class="no-js lt-ie9"> <![endif]-->
+    <!--[if gt IE 8]><!-->
+
 </head>
 <body>
-
-
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
-        <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
-        </footer>
+    <div id="loader-wrapper">
+        <div id="loader"></div>
     </div>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+        <div class="container">
+            <div class="navbar-header">
+            </div>
 
-    @Scripts.Render("~/bundles/jquery")
-    @Scripts.Render("~/bundles/bootstrap")
+            <div class="collapse navbar-collapse navbar-ex1-collapse dropdown-prod-cart-scroll scroll-menu">
+
+                <a href="http://tpeara.azurewebsites.net/" class="navbar-left" id="tgpLogo"
+                   style="padding:13px 15px 5px 0px;font-size:x-large; font-weight:900;">TGP</a>
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a href="~/index.html">Home</a></li>
+                    <li><a href="~/carFindDB.html">Database</a></li>
+                    <li><a href="~/carFindAbout.html">About</a></li>
+                    <li><a href="~/Help/Index">API</a></li>
+                    <!--<li><a href="http://tpeara.azurewebsites.net">T-Peara</a></li>-->
+                </ul>
+
+            </div>
+        </div>
+    </nav>
+
+    <title>@ViewBag.Title</title>
     @RenderSection("scripts", required: false)
+    @RenderBody()
+    <footer>
+
+        <div class="info-footer">
+            <div class="container">
+                <div class="row">
+                    <div class="col-lg-12 col-md-12 col-sm-12">
+                        <div class="col-sm-4"><span class="ic-fo icon-phone"></span><span> +1 941 920 3139</span></div>
+                        <div class="col-sm-4"><span class="ic-fo icon-envelope"></span><span> tpeara@gmail.com</span></div>
+                        <div class="col-sm-4"><span class="ic-fo icon-map-pin"></span><span>+1 828 505 1615</span></div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </footer>
 </body>
 </html>
+
+<script src="~/Scripts/jquery.min.js"></script>
+<script src="~/Scripts/jquery-ui-1.11.4.min.js"></script>
+<script src="~/js/bootstrap.min.js" type="text/javascript"></script>
+<script src="~/js/modernizr.js" type="text/javascript"></script>
+
+<script src="~/Scripts/angular.js"></script>
+<script src="~/Scripts/angular-animate.min.js"></script>
+<script src="~/Scripts/angular-ui/ui-bootstrap.min.js"></script>
+<script src="~/Scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
+<script src="~/Scripts/spin.min.js"></script>
+<script src="~/Scripts/angular-spinner.js"></script>
+<script src="~/trNgGrid-master/trNgGrid.js"></script>
+
+<script src="~/js/jquery.appear.js" type="text/javascript"></script>
+
+<!--slide-->
+<script src="~/js/slide/modernizr.custom.js" type="text/javascript"></script>
+<script src="~/js/slide/classie.js" type="text/javascript"></script>
+<script src="~/js/slide/boxesFx.js" type="text/javascript"></script>
+<!--Mini Flexslide-->
+<script src="~/js/minislide/jquery.flexslider.js" type="text/javascript"></script>
+
+<!--Carousel Testimonial-->
+<script src="~/js/owl_carousel/owl.carousel.js" type="text/javascript"></script>
+<!--Porfolio-->
+<script src="~/js/gallery/jquery.fancybox.js" type="text/javascript"></script>
+<script src="~/js/gallery/jquery.mousewheel-3.0.6.pack.js" type="text/javascript"></script>
+
+<!-- Filter Images-->
+<script src="~/js/isotope.js" type="text/javascript"></script>
+
+<script src="~/js/script.js" type="text/javascript"></script>
+
+<!--<script src="App/parseJson.js"></script>-->
+<script src="~/App/app.js"></script>
+<script src="~/App/carSvc.js"></script>
+<script src="~/App/carFrontEndCtrl.js"></script>
+<script src="~/App/loadingService.js"></script>
+<!---------------------------->
